--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <!-- Foto de perfil: substitua 'caminho/para/sua-foto.jpg' pela URL ou caminho da sua imagem -->
-        <img src="C:\Users\Eduardo\Documents\GitHub\facisa\img\IMG-EDU.jpg" alt="Foto de Perfil" class="profile-pic">
+        <img src="img\IMG-EDU.jpg" alt="Foto de Perfil" class="profile-pic">
         <!-- Nome completo -->
         <h1>Eduardo Pedro</h1>
         <p class="subtitle">Desenvolvedor Web | Desenvolvedor Java </p>
