--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <header>
-        <!-- Foto de perfil: substitua 'caminho/para/sua-foto.jpg' pela URL ou caminho da sua imagem -->
+        <!-- Foto de perfil -->
         <img src="img\IMG-EDU.jpg" alt="Foto de Perfil" class="profile-pic">
         <!-- Nome completo -->
-        <h1>Eduardo Pedro</h1>
+        <h1>Eduardo Pedro da Silva</h1>
         <p class="subtitle">Desenvolvedor Web | Desenvolvedor Java </p>
     </header>
 
@@ -23,22 +23,19 @@
             <h2>Experiências Profissionais</h2>
             <!-- Primeira experiência profissional -->
             <div class="experience-item">
-                <h3>Desenvolvedor Front-end Sênior na Empresa TechSolutions</h3>
-                <p class="date">Jan 2022 - Presente</p>
+                <h3>Técnico em Informática </h3>
+                <p class="date">Jan 2017 - 2020</p>
                 <ul>
-                    <li>Desenvolvimento e manutenção de interfaces de usuário responsivas usando React e TypeScript.</li>
-                    <li>Colaboração com equipes de design e back-end para entregar funcionalidades completas.</li>
-                    <li>Otimização de desempenho de aplicações web, resultando em melhoria de 20% na velocidade de carregamento.</li>
+                    <li>Realizava manutenção e reparos em computadores, suporte aos colaboradoes.</li>
+
                 </ul>
             </div>
             <!-- Segunda experiência profissional -->
             <div class="experience-item">
-                <h3>Analista de Sistemas na InovaTI Ltda.</h3>
-                <p class="date">Jul 2019 - Dez 2021</p>
+                <h3>Estágio em Técnico de Informática.</h3>
+                <p class="date">Jul 2011 - Dez 2011</p>
                 <ul>
-                    <li>Análise de requisitos de clientes e documentação técnica para novos projetos de software.</li>
                     <li>Suporte e manutenção de sistemas legados, garantindo a continuidade das operações.</li>
-                    <li>Participação em ciclos de vida de desenvolvimento de software (SDLC) completos.</li>
                 </ul>
             </div>
         </section>
@@ -47,13 +44,13 @@
             <h2>Formação Acadêmica</h2>
             <!-- Formação acadêmica -->
             <div class="education-item">
-                <h3>Bacharelado em Ciência da Computação - Universidade Federal de Minas Gerais (UFMG)</h3>
-                <p class="date">2015 - 2019</p>
+                <h3>Análise e Desenvolvimento de Sistemas (ADS) - UNIFACISA. </h3>
+                <p class="date">2024 - Presente</p>
                 <p>Foco em algoritmos, estruturas de dados e desenvolvimento de software.</p>
             </div>
             <div class="education-item">
-                <h3>Pós-graduação em Desenvolvimento Web Fullstack - FIAP</h3>
-                <p class="date">2020 - 2021</p>
+                <h3>Técnico em Informática - INFOGENIUS</h3>
+                <p class="date">2010 - 2012</p>
                 <p>Especialização em tecnologias front-end e back-end modernas.</p>
             </div>
         </section>
@@ -75,12 +72,11 @@
     <footer>
         <p>Conecte-se comigo:</p>
         <div class="social-links">
-            <!-- Link para o GitHub: substitua 'seu-usuario-github' pelo seu username -->
-            <a href="https://github.com/seu-usuario-github" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i> GitHub</a>
-            <!-- Link para o LinkedIn: substitua 'seu-usuario-linkedin' pelo seu username -->
+            <!-- Link para o GitHub -->
+            <a href="https://github.com/EduardoPedro259/facisa#" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i> GitHub</a>
             
         </div>
-        <p>&copy; 2025 Seu Nome Completo. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Eduardo Pedro da Silva. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
