--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="social-links">
             <!-- Link para o GitHub -->
             <a href="https://github.com/EduardoPedro259/facisa#" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i> GitHub</a>
-            
+            <a href="https://paiol.deliveryon.com.br/produtos/ver/2" target="_blank" aria-label="Olha a Pamonha"><i class="fab fa-github"></i> Site da Pamonha</a>            
         </div>
         <p>&copy; 2025 Eduardo Pedro da Silva. Todos os direitos reservados.</p>
     </footer>
